# spy

./: Makefile  README.md  s.py  setup.cfg
.github/workflow/: test.yml
.github/workflows/: test.yml
spy/: s.py  spy.py
tests/: test_spy.py
