[metadata]
name=fsspy
version=1.0.1
author = Carlo Lobrano
author-email = <c.lobrano@gmail.com> 
description = Filesystem events watcher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clobrano/spy

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
  spy = spy.spy:main

[flake8]
# ignore line length limits
ignore = E501
exclude = .git,__pycache__,build,dist,venv

[tool:pytest]
python_files=tests/*
